<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="horizontal"
>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:orientation="vertical">
        <ImageView
                android:id="@+id/tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_home"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Home"
                  android:textSize="12sp"
                  android:textColor="#404040"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:orientation="vertical">
        <ImageView
                android:id="@+id/tab_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/action_categories"

        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Categories"
                  android:textSize="12sp"
                  android:textColor="#404040"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:orientation="vertical">
        <ImageView android:id="@+id/tab_search"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:contentDescription="@string/action_search"

        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Search"
                  android:textSize="12sp"
                  android:textColor="#404040"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:orientation="vertical">
        <ImageView android:id="@+id/tab_offers"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:contentDescription="@string/action_offers"
        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Offers"
                  android:textSize="12sp"
                  android:textColor="#404040"/>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <ImageView
                android:id="@+id/tab_inbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/action_inbox"

        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Inbox"
                  android:textSize="12sp"
                  android:textColor="#404040"/>
    </LinearLayout>
</LinearLayout>
